compiler/weave_syntax/tests/data/Numbers.error
error: Expected '[token:identifier]'
        --> <source>:4:1
         |
       4 | 3.3.3
         | ^^^
error: Expected '[token:identifier]'
        --> <source>:6:1
         |
       6 | 3.3.3.3
         | ^^^
error: Expected '[token:identifier]'
        --> <source>:6:5
         |
       6 | 3.3.3.3
         |     ^^^
error: Expected '[token:identifier]'
        --> <source>:21:1
         |
      21 | 0.3_e10_
         | ^^^^^^^^
error: Expected '{'
        --> <source>:21:1
         |
      21 | 0.3_e10_
         | ^^^^^^^^
error: Expected '}'
        --> <source>:121:1
         |
     121 | 
         | ^
